# alacarte

./: alacarte.cabal  example.hs  lacarte.cabal  narradar-alacarte.cabal
Data/: AlaCarte.hs
Data/AlaCarte/: CoProducts.hs  Instances.hs  Oleg.hs  Ppr.hs  Ryan.hs  Sums.hs
