name:                alacarte
build-type:          Simple
Cabal-Version:       >= 1.2
version:             0.5
synopsis:            Open data types and open functions via coproduct of signatures
description:         This library provides the basic building blocks for assembling
		     both data types and functions from isolated individual components.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Wouter Swierstra
maintainer:          Pepe Iborra <mnislaih@gmail.com>


Flag libs
  description: Have the libraries for the extra instances available

Library
  build-Depends:       base, pretty
  exposed-modules:     Data.AlaCarte,
                       Data.AlaCarte.Oleg,
                       Data.AlaCarte.Ryan,
                       Data.AlaCarte.CoProducts,
                       Data.AlaCarte.Ppr
  ghc-options:         
  if flag(libs)
    build-depends: QuickCheck, parallel
    exposed-modules: Data.AlaCarte.Instances
  else
    build-depends: 
