name:                lacarte
version:             0.0
synopsis:            <Project description>
description:         <Project description>
category:            Data
license:             AllRightsReserved
license-file:        LICENSE
author:              Wouter Swierstra
maintainer:          mnislaih@gmail.com
build-Depends:       base
ghc-options:         