name:                narradar-alacarte
build-type:          Simple
Cabal-Version:       >= 1.2
version:             0.6
synopsis:            Open data types and open functions via coproduct of signatures
description:         This library provides the basic building blocks for assembling
		     both data types and functions from isolated individual components.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Wouter Swierstra
maintainer:          Pepe Iborra <mnislaih@gmail.com>


Library
  build-Depends:       base, pretty, QuickCheck, deepseq
  exposed-modules:     Data.AlaCarte,
                       Data.AlaCarte.Ryan,
                       Data.AlaCarte.CoProducts,
                       Data.AlaCarte.Ppr